--- a/journal/202106.md
+++ b/journal/202106.md
@@ -37,7 +37,7 @@ While this is an unfortunate delay in migrating to the decentralized Treasury an
 
 Read the full story of the bug in the [blog post](https://blog.decred.org/2021/06/25/Treasury-Expenditure-Policy-Bug/) and Twitter threads from [@matheusd](https://twitter.com/matheusd_tech/status/1409928455974699013) and [@lukebp](https://twitter.com/lukebp_/status/1409929016400822279).
 
-On a side note, this incident reminds that even the heavily [reviewed](https://github.com/decred/dcrd/pull/2170) and tested consensus code is not immune to bugs, but they are easier to fix when a well-defined and non-controversial upgrade process exists.
+On a side note, this incident reminds us that even the heavily [reviewed](https://github.com/decred/dcrd/pull/2170) and tested consensus code is not immune to bugs, but they are easier to fix when a well-defined and non-controversial upgrade process exists.
 
 
 ## Development
@@ -56,7 +56,7 @@ The [reworked code](https://github.com/decred/dcrd/pull/2656) adds a new package
 
 As usual, this large change comes in a series of easy-to-digest commits with informative descriptions, tests, benchmarks, examples, all finished with a thorough new [README](https://github.com/decred/dcrd/blob/62950c2b8b8d831cacf6f2ec46216e420d2658cc/internal/staging/stdscript/README.md).
 
-A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standardness code from consensus code, since the policy of what is considered "standard" may change at any time without requiring a consensus change and so consensus code must not be affected.
+A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standard code from consensus code, since the policy of what is considered "standard" may change at any time without requiring a consensus change and so consensus code must not be affected.
 
 A [proposal](https://proposals.decred.org/record/3a98861) for developing the next consensus change has been submitted and approved. This upgrade will practically forbid soft forks to simplify future consensus changes and [improve security](https://proposals.decred.org/record/3a98861/comments/8). Once it activates, full nodes will start rejecting transactions and scripts of newer versions they do not understand, instead of ignoring them and believing they still fully validate the chain.
 
@@ -145,7 +145,7 @@ User-facing:
 Internal:
 
 - compare transaction [scripts](https://github.com/decred/vspd/pull/267) rather than addresses when verifying fee payments (this is more correct, more efficient, and fixes some edge cases)
-- [filtering](https://github.com/decred/vspd/pull/265) of database tickets made more than twice faster
+- [filtering](https://github.com/decred/vspd/pull/265) of database tickets made more than twice as fast
 - ensure ticket [purchase height](https://github.com/decred/vspd/pull/277) is set for all tickets
 - improved [shutdown](https://github.com/decred/vspd/pull/271) handling
 - refactored [GUI cache](https://github.com/decred/vspd/pull/273) for better reuse
@@ -166,7 +166,7 @@ Merged in master and v1.2.0 release:
 
 - more accurate [order status](https://github.com/decred/dcrdex/pull/1094) reporting
 - added [trading fees](https://github.com/decred/dcrdex/pull/1074) overview to the README
-- improved match [validation](https://github.com/decred/dcrdex/pull/1077) _(has an interesting [convo](https://github.com/decred/dcrdex/pull/1077#discussion_r626657047) on concurrency { keep or drop? })_
+- improved match [validation](https://github.com/decred/dcrdex/pull/1077) _(has an interesting [convo](https://github.com/decred/dcrdex/pull/1077#discussion_r626657047) on concurrency { keep or drop? rr: I say drop, it's going to go over the heads of 99% of readers without explanation})_
 - store [archived orders](https://github.com/decred/dcrdex/pull/1071) separately to speed up the processing of active orders
 - verify [script versions](https://github.com/decred/dcrdex/pull/1107) (use different methods for dcrd 1.6 and 1.7) and prepare for handling different script versions ([backported](https://github.com/decred/dcrdex/pull/1108) v0.2 branch)
 
@@ -276,7 +276,7 @@ See Politeia Digest [issue 43](https://blockcommons.red/politeia-digest/issue043
 
 **Hashrate**: June's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) opened at ~369 Ph/s and closed ~73 Ph/s, bottoming at 61 Ph/s and peaking at 438 Ph/s throughout the month.
 
-As you can see above had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250). 
+As you can see above June had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250). 
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jul 1: Poolin 37%, F2Pool 28%, Antpool 8%, Luxor 5%, BTC.com 5%, HuobiPool 1%, UUPool 0.2%, CoinMine 0.1%.
 
@@ -415,9 +415,9 @@ In June DCR was trading between USD 87.66-174.59 / BTC 0.00298-0.00468. The aver
 
 ## Relevant External
 
-A large scale migration of Bitcoin (and others) hashrate from China is underway, and it's being covered in all the [mainstream](https://www.cnbc.com/2021/06/15/chinas-bitcoin-miner-exodus-.html) [business](https://www.bloomberg.com/news/articles/2021-06-20/bitcoin-drops-as-hashrate-declines-with-china-mining-crackdown) [publications](https://www.forbes.com/sites/zinnialee/2021/06/23/bitcoin-mining-companies-exiting-china-as-authorities-crackdown-on-cryptocurrencies/). The exodus was triggered after Chinese authorities made statements about cracking down on Bitcoin mining, and then several provinces made it clear to miners that they had to stop. One of the issues the mining companies face in [relocating](https://www.coindesk.com/bitcoin-unpacking-hashrate-nic-cart-migration) their hashing hardware is with the current [high](https://compassmining.io/education/cost-bitcoin-miners-leaving-china/) price of international shipping.
+A large scale migration of Bitcoin miners (and others) hashrate from China is underway, and it's being covered in all the [mainstream](https://www.cnbc.com/2021/06/15/chinas-bitcoin-miner-exodus-.html) [business](https://www.bloomberg.com/news/articles/2021-06-20/bitcoin-drops-as-hashrate-declines-with-china-mining-crackdown) [publications](https://www.forbes.com/sites/zinnialee/2021/06/23/bitcoin-mining-companies-exiting-china-as-authorities-crackdown-on-cryptocurrencies/). The exodus was triggered after Chinese authorities made statements about cracking down on Bitcoin mining, and then several provinces made it clear to miners that they had to stop. One of the issues the mining companies face in [relocating](https://www.coindesk.com/bitcoin-unpacking-hashrate-nic-cart-migration) their hashing hardware is with the current [high](https://compassmining.io/education/cost-bitcoin-miners-leaving-china/) price of international shipping.
 
-some BTC "hacked" story https://www.reddit.com/r/Bitcoin/comments/nv7x7j/bitcoin_was_not_hacked_by_the_fbi_the_hackers/ { relevant? rr: could make a note about how bad the coverage was by mainstream press; bee: yes please if its quick. or drop if it the amount of noise was too small }
+some BTC "hacked" story https://www.reddit.com/r/Bitcoin/comments/nv7x7j/bitcoin_was_not_hacked_by_the_fbi_the_hackers/ { relevant? rr: could make a note about how bad the coverage was by mainstream press; bee: yes please if its quick. or drop if it the amount of noise was too small. rr: I had a quick look and couldn't find sources that match my recollection so dropping it}
 
 The Zcash Open Major Grants (ZOMG) program has [funded](https://www.coindesk.com/tor-project-zcash-open-major-grants-zomg-arti-coding-language-upgrade) the Tor Project with $670,000, to be used for paying developer salaries as they work towards Arti (A Rust Tor Implementation) - which would make Tor more accessible to other applications, including Zcash.
 
