--- a/journal/202106.md
+++ b/journal/202106.md
@@ -6,10 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { intro, major news of the month, don't put any links here
 
-- new consensus upgrade on the horizon
-- approved proposals with high turnout
-- treasury consensus bug discovered
-- hashrate drop
+- A new consensus upgrade is being discussed on Politeia which would automate ticket revocations.
+- A bug with the checks on Treasury spending saw a limit which is too low being imposed, this will require a consensus upgrade to fix. 
+- Three Politeia proposals approved with high turnout (~47%) and yes votes (97-99%) - Bug Bounty, Translations and the Explicit Version Upgrades Consensus Change
+- The PoW hashrate has seen a significant drop, likely associated with the crackdown on mining within China.
 - other ideas?
 
 }
