--- a/journal/202106.md
+++ b/journal/202106.md
@@ -4,15 +4,12 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here
+June's highlights:
 
 - A new consensus upgrade is being discussed on Politeia which would automate ticket revocations.
-- A bug with the checks on Treasury spending saw a limit which is too low being imposed, this will require a consensus upgrade to fix. 
-- Three Politeia proposals approved with high turnout (~47%) and yes votes (97-99%) - Bug Bounty, Translations and the Explicit Version Upgrades Consensus Change
+- A bug with the checks on Treasury spending saw a limit which is too low being imposed, this will require a consensus upgrade to fix.
+- Three Politeia proposals approved with high turnout (~47%) and yes votes (97-99%) - Bug Bounty, Translations and the Explicit Version Upgrades Consensus Change.
 - The PoW hashrate has seen a significant drop, likely associated with the crackdown on mining within China.
-- other ideas?
-
-}
 
 Contents: { sync }
 
@@ -56,7 +53,7 @@ The [reworked code](https://github.com/decred/dcrd/pull/2656) adds a new package
 
 As usual, this large change comes in a series of easy-to-digest commits with informative descriptions, tests, benchmarks, examples, all finished with a thorough new [README](https://github.com/decred/dcrd/blob/62950c2b8b8d831cacf6f2ec46216e420d2658cc/internal/staging/stdscript/README.md).
 
-A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standard code from consensus code, since the policy of what is considered "standard" may change at any time without requiring a consensus change and so consensus code must not be affected.
+A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standardness code from consensus code, since the policy of what is considered "standard" may change at any time without requiring a consensus change and so consensus code must not be affected.
 
 A [proposal](https://proposals.decred.org/record/3a98861) for developing the next consensus change has been submitted and approved. This upgrade will practically forbid soft forks to simplify future consensus changes and [improve security](https://proposals.decred.org/record/3a98861/comments/8). Once it activates, full nodes will start rejecting transactions and scripts of newer versions they do not understand, instead of ignoring them and believing they still fully validate the chain.
 
@@ -166,7 +163,7 @@ Merged in master and v1.2.0 release:
 
 - more accurate [order status](https://github.com/decred/dcrdex/pull/1094) reporting
 - added [trading fees](https://github.com/decred/dcrdex/pull/1074) overview to the README
-- improved match [validation](https://github.com/decred/dcrdex/pull/1077) _(has an interesting [convo](https://github.com/decred/dcrdex/pull/1077#discussion_r626657047) on concurrency { keep or drop? rr: I say drop, it's going to go over the heads of 99% of readers without explanation})_
+- improved match [validation](https://github.com/decred/dcrdex/pull/1077)
 - store [archived orders](https://github.com/decred/dcrdex/pull/1071) separately to speed up the processing of active orders
 - verify [script versions](https://github.com/decred/dcrdex/pull/1107) (use different methods for dcrd 1.6 and 1.7) and prepare for handling different script versions ([backported](https://github.com/decred/dcrdex/pull/1108) v0.2 branch)
 
@@ -416,8 +413,6 @@ In June DCR was trading between USD 87.66-174.59 / BTC 0.00298-0.00468. The aver
 ## Relevant External
 
 A large scale migration of Bitcoin miners (and others) hashrate from China is underway, and it's being covered in all the [mainstream](https://www.cnbc.com/2021/06/15/chinas-bitcoin-miner-exodus-.html) [business](https://www.bloomberg.com/news/articles/2021-06-20/bitcoin-drops-as-hashrate-declines-with-china-mining-crackdown) [publications](https://www.forbes.com/sites/zinnialee/2021/06/23/bitcoin-mining-companies-exiting-china-as-authorities-crackdown-on-cryptocurrencies/). The exodus was triggered after Chinese authorities made statements about cracking down on Bitcoin mining, and then several provinces made it clear to miners that they had to stop. One of the issues the mining companies face in [relocating](https://www.coindesk.com/bitcoin-unpacking-hashrate-nic-cart-migration) their hashing hardware is with the current [high](https://compassmining.io/education/cost-bitcoin-miners-leaving-china/) price of international shipping.
-
-some BTC "hacked" story https://www.reddit.com/r/Bitcoin/comments/nv7x7j/bitcoin_was_not_hacked_by_the_fbi_the_hackers/ { relevant? rr: could make a note about how bad the coverage was by mainstream press; bee: yes please if its quick. or drop if it the amount of noise was too small. rr: I had a quick look and couldn't find sources that match my recollection so dropping it}
 
 The Zcash Open Major Grants (ZOMG) program has [funded](https://www.coindesk.com/tor-project-zcash-open-major-grants-zomg-arti-coding-language-upgrade) the Tor Project with $670,000, to be used for paying developer salaries as they work towards Arti (A Rust Tor Implementation) - which would make Tor more accessible to other applications, including Zcash.
 
