apply Polish part 2 that I forgot to push

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -298,7 +298,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 34 nodes (+
 
 ## Ecosystem
 
-[stakey.net](https://stakey.net/) has [removed](https://citadel.stakey.net/@support/106416385081730641) the web interface for the legacy dcrstakepool instance. Voting wallets and the API will be maintained until users migrate to vspd. As of Jul 1, stakey.net's legacy VSP managed 63 live tickets, down from 134 on Jun 1. Its [vspd instance](https://stakey.net/) has become the largest, managing more than 2,200 live tickets.
+[stakey.net](https://stakey.net/) has [removed](https://citadel.stakey.net/@support/106416385081730641) the web interface for its legacy dcrstakepool instance. Voting wallets and the API will be maintained until users migrate to vspd. As of Jul 1, stakey.net's legacy VSP managed 63 live tickets, down from 134 on Jun 1. Its [vspd instance](https://stakey.net/) has become the largest, managing more than 2,200 live tickets.
 
 To maintain decentralization, it is recommended to avoid providers that control too many tickets. But stakey.net presents a "problem" here, as it is the only known VSP offering a Tor hidden service. Other providers are welcome to the competition!
 
@@ -308,13 +308,13 @@ dcr.farm now redirects to its [vspd instance](https://vsp.dcr.farm/) but @infert
 
 New VSP from crypto-synergy.net is up on [mainnet](https://vspd.synergy-crypto.net/) and [testnet](https://vspd-testnet.synergy-crypto.net/). The mainnet instance reports its first voted ticket (a requirement for all new VSPs) but it needs to pass the [review](https://github.com/decred/dcrwebapi/pull/147) to get listed on [decred.org/vsp](https://decred.org/vsp/).
 
-At this point legacy VSPs hold less than 1.4% of the ticket pool and upgrading to vspd is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) to avoid the risk of missed tickets, e.g. in a scenario where another consensus upgrade is activated while [dcrstakepool](https://github.com/decred/dcrstakepool) is _not_ patched to vote with it.
+At this point legacy VSPs hold less than 1.4% of the ticket pool and upgrading to vspd is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) to avoid the risk of missed tickets, e.g. in a scenario where another consensus upgrade is activated while [dcrstakepool](https://github.com/decred/dcrstakepool) is _not_ patched to follow the chain.
 
 Ledger Live users are recommended to [update](https://www.ledger.com/ledger-live) to version 2.29.0 or later where [issues](https://status.ledger.com/incidents/j1sypv88pgs6) with syncing and sending DCR in have been fixed. The disruption between first [mentions](https://status.ledger.com/incidents/j1sypv88pgs6) of the issue and the release of [v2.29.0](https://github.com/LedgerHQ/ledger-live-desktop/releases/tag/v2.29.0) lasted around 22 days.
 
 Indian [WazirX](https://wazirx.com/) has [enabled](https://twitter.com/WazirXIndia/status/1408022090750496776) DCR/INR and DCR/USDT trading. DCR was part of the ["Rapid Listing"](https://blog.wazirx.com/rapid-listing-initiative-on-wazirx/) process where trading starts sooner but deposit and withdrawal options are limited until the full integration is completed. In case of this listing, inter-wallet deposits and withdrawals between WazirX and Binance are [available](https://twitter.com/WazirXIndia/status/1407655011925073921) with no fees. WazirX was [acquired](https://www.binance.com/en/blog/404105749895733248/Binance-Acquires-Indias-Leading-Digital-Asset-Platform-WazirX-to-Launch-Multiple-FiattoCrypto-Gateways) by Binance in 2019.
 
-For those who missed it, there are two services in the wider Decred ecosystem. One is a modestly called Twitter alternative from stakey.net:
+For those who missed it, two lesser-known services in the wider Decred ecosystem are worth highlighting. One is a modestly called Twitter alternative from stakey.net:
 
 > This _Decred citadel_ is a modestly fast, secure, and up-to-date Mastodon instance with monitored server availability and nightly off-site backups. Open to the Decred community. (invite link [here](https://citadel.stakey.net/@support/105249104743040856))
 
@@ -326,8 +326,6 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 
 
 ## Outreach
-
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
 
 Monde PR's achievements for June:
 
@@ -384,7 +382,7 @@ Translations:
 
 Comm systems news:
 
-- Matrix temporarily had degraded performance due to a large scale attempt to bulk-register [bot accounts](https://twitter.com/matrixdotorg/status/1409873992454967304) and spam the network.
+- Matrix experienced degraded performance due to a large scale attempt to bulk-register [bot accounts](https://twitter.com/matrixdotorg/status/1409873992454967304) and spam the network.
 
 Selected Reddit posts:
 
@@ -394,11 +392,13 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- @sumiflow is asking exchanges a [tough question](https://twitter.com/Sumiflow/status/1410003328780619777) about their listing policies
+- @sumiflow is asking exchanges a [tough question](https://twitter.com/Sumiflow/status/1410003328780619777) about their listing choices
 - @lukebp on how "De"Fi should not rely on a handful of trivially [blockable](https://twitter.com/lukebp_/status/1409280372970508301) central points
 - @lukebp showed why Politeia is _huge_, with live examples:
 
-> Politeia has undergone a huge upgrade this year and is doing things that nobody else is doing. \[technical explanation...\]
+> Politeia has undergone a huge upgrade this year and is doing things that nobody else is doing.
+> 
+> (technical explanation...)
 > 
 > So why is this a big deal? This provides us with irrefutable proof that my proposal existed at block height 552071 and has not been altered since then. No other production site provides this level of transparency and cryptographic auditability for its data. ([@lukebp](https://twitter.com/lukebp_/status/1407089424924610572))
 
