use title image

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – June 2021
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![abstract art by @saender](../img/202106.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Core Lattice by @saender_
 
 June's highlights:
 
@@ -438,5 +438,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, lukebp, raedah
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
