drop draft from title and lint

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – June 2021
+# Decred Journal – June 2021
 
 ![abstract art by @saender](../img/202106.1.github.png)
 
@@ -272,7 +272,7 @@ See Politeia Digest [issue 43](https://blockcommons.red/politeia-digest/issue043
 
 **Hashrate**: June's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) opened at ~369 Ph/s and closed ~73 Ph/s, bottoming at 61 Ph/s and peaking at 438 Ph/s throughout the month.
 
-As you can see above June had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250). 
+As you can see above June had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250).
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jul 1: Poolin 37%, F2Pool 28%, Antpool 8%, Luxor 5%, BTC.com 5%, HuobiPool 1%, UUPool 0.2%, CoinMine 0.1%.
 
@@ -327,7 +327,7 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 Monde PR's achievements for June:
 
 - pitched 1 story to finance and crypto publications
-- responded to 6 requests for comments/PR opportunities 
+- responded to 6 requests for comments/PR opportunities
 - secured 2 media interviews
 
 News coverage secured by Monde PR:
