undo 2 false positive comma fixes

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -282,7 +282,7 @@ Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) was 7.33-7.72 million DCR, meaning that 56.1-59% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On Jul 1, ~8,000 (-200) live tickets were managed by vspd servers and ~600 (-500) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 20.9% of the ticket pool, down from 22.7% on Jun 1. Delisted but still, active legacy VSPs managed 26 live tickets (-35).
+**VSP**: On Jul 1, ~8,000 (-200) live tickets were managed by vspd servers and ~600 (-500) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 20.9% of the ticket pool, down from 22.7% on Jun 1. Delisted but still active legacy VSPs managed 26 live tickets (-35).
 
 **Nodes**: Throughout June there were around 216 reachable nodes according to [dcrextdata](https://analytics.planetdecred.org/nodes).
 
@@ -305,7 +305,7 @@ dcr.farm now redirects to its [vspd instance](https://vsp.dcr.farm/) but @infert
 
 New VSP from crypto-synergy.net is up on [mainnet](https://vspd.synergy-crypto.net/) and [testnet](https://vspd-testnet.synergy-crypto.net/). The mainnet instance reports its first voted ticket (a requirement for all new VSPs) but it needs to pass the [review](https://github.com/decred/dcrwebapi/pull/147) to get listed on [decred.org/vsp](https://decred.org/vsp/).
 
-At this point legacy, VSPs hold less than 1.4% of the ticket pool and upgrading to vspd is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) to avoid the risk of missed tickets, e.g. in a scenario where another consensus upgrade is activated while [dcrstakepool](https://github.com/decred/dcrstakepool) is _not_ patched to follow the chain.
+At this point legacy VSPs hold less than 1.4% of the ticket pool and upgrading to vspd is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) to avoid the risk of missed tickets, e.g. in a scenario where another consensus upgrade is activated while [dcrstakepool](https://github.com/decred/dcrstakepool) is _not_ patched to follow the chain.
 
 Ledger Live users are recommended to [update](https://www.ledger.com/ledger-live) to version 2.29.0 or later where [issues](https://status.ledger.com/incidents/j1sypv88pgs6) with syncing and sending DCR in have been fixed. The disruption between first [mentions](https://status.ledger.com/incidents/j1sypv88pgs6) of the issue and the release of [v2.29.0](https://github.com/LedgerHQ/ledger-live-desktop/releases/tag/v2.29.0) lasted around 22 days.
 
