--- a/journal/202106.md
+++ b/journal/202106.md
@@ -6,9 +6,9 @@ _Image: Core Lattice by @saender_
 
 June's highlights:
 
-- An upcoming consensus upgrade was approved on Politeia which would make future consensus changes easier, more reliable and more secure.
+- An upcoming consensus upgrade was approved on Politeia which would make future consensus changes easier, more reliable, and more secure.
 - A bug with the checks on treasury spending saw a limit which is too low being imposed, this will require a consensus upgrade to fix.
-- Three Politeia proposals approved with high turnout (~47%) and yes votes (97-99%) - Bug Bounty, Translations and the Explicit Version Upgrades Consensus Change.
+- Three Politeia proposals approved with high turnout (~47%) and yes votes (97-99%) - Bug Bounty, Translations, and the Explicit Version Upgrades Consensus Change.
 - The PoW hashrate has seen a significant drop, likely associated with the crackdown on mining within China.
 
 Contents:
@@ -29,7 +29,7 @@ Contents:
 
 ## New Treasury Bug
 
-Payments from the new treasury are blocked for several months by a bug in expenditure policy implementation. The test treasury spend transaction mined on [May 22](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) triggered an overlooked condition in the safety mechanism protecting from spending too much DCR in a short period of time. For the next few months only around 0.15 DCR can be spent from the new treasury, which is too low to pay contractors.
+Payments from the new treasury are blocked for several months by a bug in expenditure policy implementation. The test treasury spend transaction mined on [May 22](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) triggered an overlooked condition in the safety mechanism protecting from spending too much DCR in a short period of time. For the next few months, only around 0.15 DCR can be spent from the new treasury, which is too low to pay contractors.
 
 While this is an unfortunate delay in migrating to the decentralized treasury and extra work to fix the bug, the migration plan was created to handle any cases such as this. All funds in the network are safe and contractor payments will continue from the legacy treasury. Fixing the safety algorithm requires another consensus change that is [under development](https://github.com/decred/dcps/pull/20).
 
@@ -276,7 +276,7 @@ As you can see above June had a large drop in hashrate due to miners shifting ou
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jul 1: Poolin 37%, F2Pool 28%, Antpool 8%, Luxor 5%, BTC.com 5%, HuobiPool 1%, UUPool 0.2%, CoinMine 0.1%.
 
-Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/decred) almost matches the reported hashrate. Unidentified 15% mined blocks are split between same 4 addresses as [previously](202105.md).
+Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/decred) almost matches the reported hashrate. Unidentified 15% mined blocks are split between the same 4 addresses as [previously](202105.md).
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kpb32srm-kqn8vbkn&axis=time&visibility=true-true&mode=stepped) varied between 168-208 DCR, with 30-day [average](https://dcrstats.com/) at 184.7 DCR (-1).
 
