--- a/journal/202107.md
+++ b/journal/202107.md
@@ -51,13 +51,9 @@ At this point we have 3 upcoming consensus changes at different stages of develo
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- {}
-
-<a id="dcrctl" />
-
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-- {}
+- added an RPC method that will allow Decrediton to discover active addresses more efficiently
+- added an RPC method to [revoke](https://github.com/decred/dcrwallet/pull/2061) tickets in SPV mode (also for Decrediton)
+- fixed invalid passphrase errors when concurrently [unlocking](https://github.com/decred/dcrwallet/pull/2067) the wallet
 
 <a id="decrediton" />
 
