--- a/journal/202107.md
+++ b/journal/202107.md
@@ -252,7 +252,8 @@ See Politeia Digest [issue 44](https://blockcommons.red/politeia-digest/issue044
 
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) opened at ~71.4 Ph/s and closed ~316.3 Ph/s, bottoming at 70.29 Ph/s and peaking at 334 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58.11%, F2Pool 23.2%, Antpool 6.41%, BTC.com 4.29%, Easy2mine 4.09%, Luxor 2.32%, Huobipool 0.92%, ViaBTC 0.365%,Coinmine 0.09%, okex 0.081%, UUPool 0.063%.
+
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
