--- a/journal/202107.md
+++ b/journal/202107.md
@@ -363,7 +363,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In July DCR was trading between USD 91.7-158.46 / BTC 0.003377-0.003812. The average daily rate was ${n.nn}.
+In July DCR was trading between USD 91.7-158.46 / BTC 0.003377-0.003812. The average daily rate was $127.48.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
