--- a/journal/202107.md
+++ b/journal/202107.md
@@ -155,21 +155,25 @@ A few fixes have been [backported](https://github.com/decred/dcrdex/commits/rele
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
-
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+{ not seeing anything notable merged in July, let me know if I missed something }
 
 <a id="dcrios" />
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+- updated [Vietnamese](https://github.com/planetdecred/dcrios/pull/809) translation
 
 <a id="godcr" />
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- implemented [HTML renderer](https://github.com/planetdecred/godcr/pull/469) for displaying styled text
+- implemented custom [toggle](https://github.com/planetdecred/godcr/pull/487) widget
+- [hide](https://github.com/planetdecred/godcr/pull/493) staking balances and imported account when they have no funds
+- added [License](https://github.com/planetdecred/godcr/pull/516) page
+- UI updates and code cleanup for: [Proposal](https://github.com/planetdecred/godcr/pull/513) list and details, [Wallet](https://github.com/planetdecred/godcr/pull/496), [Wallets](https://github.com/planetdecred/godcr/pull/493), [Send](https://github.com/planetdecred/godcr/pull/524), [StakeShuffle](https://github.com/planetdecred/godcr/pull/534), and several [Tickets](https://github.com/planetdecred/godcr/pull/539) pages
+- pages and modals grouped into [packages](https://github.com/planetdecred/godcr/pull/512)
+- 6+ bug fixes
 
 <a id="dcrdata" />
 
