--- a/journal/202107.md
+++ b/journal/202107.md
@@ -205,7 +205,9 @@ Internal and developer:
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- {}
+- added percentage of [revoked](https://github.com/decred/dcrweb/pull/993) tickets to the [VSP page](https://decred.org/vsp/) (useful metric for choosing a VSP)
+- show [both](https://decred.org/) press releases and latest posts at [decred.org](https://decred.org/) home page
+- added the [press release](https://decred.org/press/2021-05-25_dex_decrediton/) about DCRDEX integration in Decrediton
 
 { check other repos in:
 
